testsuite/poke.pkl/pow-f64-diag-2.pk
/* { dg-do compile } */

var res
  = 1L .** (9 as uint<33>); /* { dg-error "invalid operand .*" } */
